# AutonomousQuadruped

./: .gitignore  README.md  test.py
envs/: LegKinematics.py  ars.py  env_randomizer_base.py  env_tester2.py  gui.py  motor.py  test.py  vrka.py  (+2 more)
src/quadruped/: package.xml  setup.cfg  setup.py
src/quadruped/Rviz+gazebo files/: quadruped_controller.yaml  velodyne.world
src/quadruped/Rviz+gazebo files/rivz/: rviz
src/quadruped/URDF__updated_files/: STL_updated_files  quadruped.urdf
src/quadruped/URDF__updated_files/Launch/: display.launch  gazebo.launch
src/quadruped/URDF__updated_files/STL_updated_files/: LeftBackShoulder.stl  LeftBackTibia.stl  LeftFrontFemur.stl  LeftFrontShoulder.stl  LeftFrontTibia.stl  RightBackFemur.stl  RightBackShoulder.stl  RightFrontFemur.stl  RightFrontShoulder.stl  RightFrontTibia.stl  desc  leftbackleg_rsz.stl
src/quadruped/URDF__updated_files/config/: quadruped_controller.yaml
src/quadruped/URDF__updated_files/meshes/: LeftBackFemur.stl  RightBackTibia.stl  base_chassis.stl  text
src/quadruped/URDF__updated_files/rviz/: rviz.rviz
src/quadruped/Vrka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quadruped/quadruped/: quadruped.gv  urdf.py
src/quadruped/quadruped/MotionPlanning/: artificial_potential_field.py  leg_position_calculator.py
src/quadruped/quadruped/RL/: bezier.py  optimised_leg_trajectory.py
src/quadruped/quadruped/RL/ARS/: ars.py
src/quadruped/quadruped/RL/PPO2/: main.py
src/quadruped/quadruped/RL/gym-vrka/gym_vrka/: __init__.py  test.py
src/quadruped/quadruped/RL/gym-vrka/gym_vrka/envs/: __init__.py  env.py  env2.py  heightfield.py  vrka.py  vrka_bezeir_env.py  vrka_env_randomizer.py  vrka_gym_env.py
src/quadruped/quadruped/RL/gymVrka/gym_vrka/: __init__.py
src/quadruped/quadruped/RL/gymVrka/gym_vrka/envs/: env.py  gui.py  heightfield.py  openloopcontroller.py  vrka.py  vrka_gym_env.py
src/quadruped/quadruped/RL/gym_env/: env.py  heightfield.py
src/quadruped/quadruped/SLAM/: map_optimisation.py  sensor_fusion.py
src/quadruped/quadruped/meshes/: rightbackleg_rsz.stl
src/quadruped/quadruped/pybullet_data/: quadruped.urdf  urdf.py  vrka.urdf
src/quadruped/quadruped/pybullet_data/urdf/: leftfrontleg_rsz.stl  rightfrontleg_rsz.stl
src/quadruped_interfaces/: CMakeLists.txt  package.xml
src/quadruped_interfaces/msg/: LegPosition.msg
(+59 files in other folders)
