<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_interfaces</name>
  <version>0.0.0</version>
  <description>This package only contains the msg and srv files as needed by the quadruped package</description>
  <maintainer email="ashutoshshrm529@gmail.com">ashutoshshrm529</maintainer>
  <maintainer email="ekanshgupta92@gmail.com">ekanshgupta92</maintainer>
  <maintainer email="mehuljain.jaipur@gmail.com">Damn-It-Tech</maintainer>
  <maintainer email="archit.mudugu2802@gmail.com">archit2802</maintainer>
  <maintainer email="bhavika.gopalani@gmail.com">bhavika-g</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
